Anfang Anmelden und Registrieren

--- a/JEE_uebungen/WebContent/ajax/anmelden.html
+++ b/JEE_uebungen/WebContent/ajax/anmelden.html
@@ -10,10 +10,13 @@
 </head>
 <body style="padding: 5px;">
 	<h1>Melde dich hier an!</h1>
-	<form action="registrierung.jsp">
+	<form action="pruefen.jsp">
 		<label>Benutzername: <input type="text" name="benutzername"required></label>
 		<br>
-		<a class="btn btn-primary" href="registrierung.jsp" role="button">Senden</a>
+		<label>Passwort: <input type="password" name="passwort"required></label>
+		<br>
+		 <button class="btn btn-primary" type="submit">Anmelden</button>
+		<a class="btn btn-primary" href="registrierung.jsp" role="button">Registrieren</a>
 	</form>
 </body>
 </html>
