--- a/JEE_uebungen/WebContent/ajax/anmelden.html
+++ b/JEE_uebungen/WebContent/ajax/anmelden.html
@@ -10,7 +10,7 @@
 </head>
 <body style="padding: 5px;">
 	<h1>Melde dich hier an!</h1>
-	<form action="pruefen.jsp">
+	<form action="anm_pruefen.jsp">
 		<label>Benutzername: <input type="text" name="benutzername"required></label>
 		<br>
 		<label>Passwort: <input type="password" name="passwort"required></label>
